--- a/CarbonFootprint_site/templates/main.html
+++ b/CarbonFootprint_site/templates/main.html
@@ -2,11 +2,11 @@
 {%block title%}Results{%endblock%}
 {%block content%}
 
-<link rel="stylesheet" href="static/base.css"/>
+<link rel="stylesheet" href="static/main.css"/>
 
 <div class="home-banner">
-  <h1 class="home-title-text">Our Mission</h1>
-  <span class="home-text-fancy">
+  <h1 class="title-text">Our Mission</h1>
+  <span class="text-fancy">
     Welcome to our Carbon Footprint Calculator! Take control of your
     environmental impact and pave the way to a more sustainable
     lifestyle. Our user-friendly tool empowers individuals like you to
@@ -16,7 +16,7 @@
   <a href='/explanation'>
     <button class="home-button button">How it works</button>
   </a>
-  <span class="home-text-fancy">
+  <span class="text-fancy">
     Start calculating your carbon footprint today and pave the way
     towards a more sustainable and environmentally conscious lifestyle.
     Together, we can make a difference for a greener tomorrow!
