--- a/CarbonFootprint_site/static/main.css
+++ b/CarbonFootprint_site/static/main.css
@@ -1,41 +1,47 @@
 .home-banner {
 
-  width: 100%;
-  height: 560px;
   display: flex;
-  padding: var(--dl-space-space-threeunits);
-  align-items: center;
-  flex-direction: row;
+  flex-direction: column;
   background-size: cover;
-  justify-content: space-between;
-  background-image: url('https://images.unsplash.com/photo-1506634064465-7dab4de896ed?ixid=Mnw5MTMyMXwwfDF8c2VhcmNofDY1fHxncmVlbnxlbnwwfHx8fDE2ODI4NDE4NTc&ixlib=rb-4.0.3&w=1500');
+  background-image: url('/static/images/background.png');
   background-position: center;
+  align-items: center;
+  gap: 25px;
+  padding: 25px;
 
-}
+  .title-text {
 
-.home-title-text {
+    font-size: 3rem;
+    text-align: center;
 
-  font-size: 3rem;
-  text-align: center;
+  }
 
-}
+  .text-std {
 
-.home-text-std {
+    font-size: 20px;
+    text-align: center;
 
-  font-size: 20px;
-  text-align: center;
-  max-width: var(--dl-size-size-maxwidth);
-  margin-top: var(--dl-space-space-twounits);
-  margin-bottom: var(--dl-space-space-twounits);
+  }
+
+  .text-fancy {
+
+    font-size: 25px;
+    max-width: 80%;
+    height: fit-content;
+    text-align: center;
+    font-family: Bad Script, fantasy;
+
+  }
 
 }
 
 .home-text-fancy {
 
   font-size: 25px;
+  max-width: 80%;
+  height: fit-content;
   text-align: center;
   font-family: Bad Script, fantasy;
-  max-width: var(--dl-size-size-maxwidth);
   margin-top: var(--dl-space-space-twounits);
   margin-bottom: var(--dl-space-space-twounits);
 
@@ -59,10 +65,103 @@
   width: 100%;
   height: auto;
   display: flex;
-  align-items: center;
+  align-items: stretch;
   margin-bottom: var(--dl-space-space-unit);
+  padding-left: 50px;
+  padding-right: 50px;
   flex-direction: column;
   justify-content: center;
+
+}
+
+.subsection-class{
+
+  width: inherit;
+  border-top: 1px solid #969696;
+  margin-top: var(--dl-space-space-fourunits);
+  padding: 20px;
+
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  align-items: center;
+
+  .text-title {
+
+    font-size: 20px;
+    text-align: center;
+    margin-left: 5px;
+    margin-right: 5px;
+
+  }
+
+  .text-explain {
+
+    font-size: 20px;
+    font-family: Bad Script, fantasy;
+    max-width: var(--dl-size-size-maxwidth);
+
+  }
+
+  .subsection-container{
+
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: flex-start;
+    align-content: stretch;
+    justify-content: center;
+    gap: 50px 10px;
+    margin-top: var(--dl-space-space-unit);
+
+    .container-sub-subsection{
+
+      display: flex;
+      flex-direction: column;
+      flex-wrap: nowrap;
+      align-items: center;
+      border-radius: 25px;
+      border: 1px solid #969696;
+      padding: 20px;
+      gap: 10px;
+
+      .input_container {
+
+        flex: 0 0 auto;
+        width: 100%;
+        height: auto;
+        display: flex;
+        align-self: flex-end;
+        align-items: center;
+        margin-right: 0px;
+        justify-content: flex-end;
+
+        .property-name {
+
+          width: var(--dl-size-size-medium);
+          align-self: center;
+          text-align: left;
+          margin-right: var(--dl-space-space-unit);
+
+          .small {
+            font-size: 12px;
+            font-style: italic;
+          }
+
+        }
+
+        .text-input {
+
+          width: var(--dl-size-size-large);
+          height: 30px;
+
+        }
+
+      }
+
+    }
+
+  }
 
 }
 
