--- a/CarbonFootprint_site/static/old/base.css
+++ b/CarbonFootprint_site/static/old/base.css
@@ -7,24 +7,25 @@
   background-position: center;
   margin-bottom: var(--dl-space-space-twounits);
 
-  .home-title-text {
+}
 
-    font-size: 3rem;
-    text-align: center;
+.home-banner .home-title-text {
 
-  }
-
-  .home-text-std {
-
-    font-size: 20px;
-    text-align: center;
-    max-width: var(--dl-size-size-maxwidth);
-    margin-top: var(--dl-space-space-twounits);
-    margin-bottom: var(--dl-space-space-twounits);
-
-  }
+  font-size: 3rem;
+  text-align: center;
 
 }
+
+.home-banner .home-text-std {
+
+  font-size: 20px;
+  text-align: center;
+  max-width: var(--dl-size-size-maxwidth);
+  margin-top: var(--dl-space-space-twounits);
+  margin-bottom: var(--dl-space-space-twounits);
+
+}
+
 
 .home-text-fancy {
 
@@ -65,7 +66,7 @@
 
 }
 
-.subsection-class{
+.subsection-class {
 
   width: inherit;
   border-top: 1px solid #969696;
@@ -77,82 +78,81 @@
   flex-wrap: nowrap;
   align-items: center;
 
-  .text-title {
+}
 
-    font-size: 20px;
-    text-align: center;
-    margin-left: 5px;
-    margin-right: 5px;
+.subsection-class .text-title {
 
-  }
+  font-size: 20px;
+  text-align: center;
+  margin-left: 5px;
+  margin-right: 5px;
 
-  .text-explain {
+}
 
-    font-size: 20px;
-    font-family: Bad Script, fantasy;
-    max-width: var(--dl-size-size-maxwidth);
+.subsection-class .text-explain {
 
-  }
+  font-size: 20px;
+  font-family: Bad Script, fantasy;
+  max-width: var(--dl-size-size-maxwidth);
 
-  .subsection-container{
+}
 
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    align-items: flex-start;
-    align-content: stretch;
-    justify-content: center;
-    gap: 50px 10px;
-    margin-top: var(--dl-space-space-unit);
+.subsection-class .subsection-container {
 
-    .container-sub-subsection{
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-items: flex-start;
+  align-content: stretch;
+  justify-content: center;
+  gap: 50px 10px;
+  margin-top: var(--dl-space-space-unit);
 
-      display: flex;
-      flex-direction: column;
-      flex-wrap: nowrap;
-      align-items: center;
-      border-radius: 25px;
-      border: 1px solid #969696;
-      padding: 20px;
-      gap: 10px;
+}
 
-      .input_container {
+.subsection-class .subsection-container .container-sub-subsection {
 
-        flex: 0 0 auto;
-        width: 100%;
-        height: auto;
-        display: flex;
-        align-self: flex-end;
-        align-items: center;
-        margin-right: 0px;
-        justify-content: flex-end;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  align-items: center;
+  border-radius: 25px;
+  border: 1px solid #969696;
+  padding: 20px;
+  gap: 10px;
 
-        .property-name {
+}
+.subsection-class .subsection-container .container-sub-subsection .input_container {
 
-          width: var(--dl-size-size-medium);
-          align-self: center;
-          text-align: left;
-          margin-right: var(--dl-space-space-unit);
+  flex: 0 0 auto;
+  width: 100%;
+  height: auto;
+  display: flex;
+  align-self: flex-end;
+  align-items: center;
+  margin-right: 0px;
+  justify-content: flex-end;
 
-          .small {
-            font-size: 12px;
-            font-style: italic;
-          }
+}
+.subsection-class .subsection-container .container-sub-subsection .input_container .property-name {
 
-        }
+  width: var(--dl-size-size-medium);
+  align-self: center;
+  text-align: left;
+  margin-right: var(--dl-space-space-unit);
 
-        .text-input {
+}
+.subsection-class .subsection-container .container-sub-subsection .input_container .property-name .small {
 
-          width: var(--dl-size-size-large);
-          height: 30px;
+    font-size: 12px;
+    font-style: italic;
 
-        }
+}
 
-      }
+.subsection-class .subsection-container .container-sub-subsection .input_container .text-input {
 
-    }
-
-  }
+  width: var(--dl-size-size-large);
+  height: 30px;
 
 }
 
