--- a/CarbonFootprint_site/templates/0 - layout.html
+++ b/CarbonFootprint_site/templates/0 - layout.html
@@ -137,7 +137,7 @@
             <header data-role="Header" class="header_class">
 
                 <a href='/'><img alt="logo" src="static/images/logo_app.png" class="header-logo-image"/></a>
-                <a href='https://www.unifi.it/changelang-eng.html'><img alt="image" src="static/images/logo_unifi.png" class="header-logo-image"/></a>
+                <a href='https://www.unifi.it/changelang-eng.html' target="_blank"><img alt="image" src="static/images/logo_unifi.png" class="header-logo-image"/></a>
 
             </header>
 
@@ -153,3 +153,6 @@
         </div>
     </body>
 </html>
+
+{%block finalremarks%}
+{%endblock%}
